Add calculator with backend
